<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#ffffff"
    >



    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@mipmap/ic_launcher_foreground"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center|top"
            android:text="@string/welcome"
            android:textColor="#a1b2c3"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1.3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50sp"
            android:layout_marginRight="50sp"
            android:orientation="vertical">
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/user"
                android:gravity="center"
                android:textSize="18sp"/>

            <EditText
                android:layout_weight="2"
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:text=""
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50sp"
            android:layout_marginRight="50sp"
            android:orientation="vertical">
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/password"
                android:gravity="center"
                android:textSize="18sp"/>
            <EditText
                android:layout_weight="2"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:text=""
                android:inputType="textPassword"/>

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remain"
                android:textColor="#2196F3"
                android:textSize="16sp"
                android:id="@+id/remainTime"/>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#2196F3"
                android:textSize="16sp"
                android:id="@+id/count"/>
        </LinearLayout>


        <ImageButton
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/login"
            android:id="@+id/login"
            android:background="#ffffff"
            android:layout_marginBottom="60dp"/>

        <TextView
            android:layout_weight="4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/logout"
            android:gravity="center|top"
            android:textSize="18sp"
            android:textColor="#DA2528"
            android:id="@+id/logout"/>

    </LinearLayout>

</LinearLayout>


